update api drugstore
